--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "diego/randomData",
+    "name": "Diego-Brocanelli/randomData",
     "description": "Random Data",
     "license": "MIT",
     "authors": [
