Include minimum-stability

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
             "email": "contato@diegobrocanelli.com.br"
         }
     ],
+    "minimum-stability": "dev",
     "autoload":{
         "psr-4":{
             "Random\\":"src/Random/"
