--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "homepage": "https://github.com/Diego-Brocanelli/randomData",
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.3.8",
-        "diego-brocanelli/random-data": "dev-master"
+        "php": ">=5.3.8"
     },
     "autoload":{
         "psr-4":{
